@@ -60,6 +60,33 @@
     (setq list (funcall sym list "first" 1 #'string=))
     (should (eq (compat-call plist-get list "first" #'string=) 1))))
 
+(ert-deftest with-memoization ()
+  (let ((x (cons nil nil)) y computed)
+    (with-memoization (car x)
+      (setq computed 'a))
+    (should-equal (car x) 'a)
+    (should-equal computed 'a)
+    (with-memoization (car x)
+      (setq computed 'b))
+    (should-equal (car x) 'a)
+    (should-equal computed 'a)
+    (with-memoization (cdr x)
+      (setq computed 'c))
+    (should-equal (cdr x) 'c)
+    (should-equal computed 'c)
+    (with-memoization (cdr x)
+      (setq computed 'd))
+    (should-equal (cdr x) 'c)
+    (should-equal computed 'c)
+    (with-memoization y
+      (setq computed 'e))
+    (should-equal y 'e)
+    (should-equal computed 'e)
+    (with-memoization y
+      (setq computed 'f))
+    (should-equal y 'e)
+    (should-equal computed 'e)))
+
 (ert-deftest make-separator-line ()
   (should-equal (length (make-separator-line 10)) 11)
   (should (string-suffix-p "\n" (make-separator-line 10)))
