@@ -6,6 +6,7 @@
 - compat-25: Improve algorithmic complexity of ~sort~.
 - compat-28: Add ~make-separator-line~.
 - compat-29: Minor fixes to ~keymap-*~ functions.
+- compat-29: Add ~with-memoization~.
 
 * Release of "Compat" Version 29.1.1.0
 
